Bug 234793 - JJ: "Window shortcuts" cannot be unset
Summary: JJ: "Window shortcuts" cannot be unset
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (show other bugs)
Version: git master
Platform: Compiled Sources Unspecified
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2010-04-19 11:56 UTC by Will Stephenson
Modified: 2012-03-18 21:54 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Will Stephenson 2010-04-19 11:56:18 UTC
Version:            (using Devel)
Installed from:    Compiled sources

The Window Shortcut dialog's shortcut widget, has a clear button, but it does nothing when clicked.
Comment 1 Martin Flöser 2010-08-29 00:40:20 UTC
For those wanting to look for this bug: Alt+F3 in any window -> Advanced -> window shortcut.

The code for the shown menu can be found in useractions.cpp and from there the responsible widget should be discoverable.
Comment 2 moses 2011-12-05 06:20:03 UTC
Has this bug been fixed ? I'm planning to work on this.
Comment 3 Thomas Lübking 2011-12-05 21:03:26 UTC
Nope.
source is in "utils.cpp"
Comment 4 moses 2011-12-11 15:35:45 UTC
Hi

2 things :
First --
I tried the below steps :
Alt-F3 -> Advanced -> Window Shortcut.

Here I couldn't see any "clear" button. I had a "None" button which shows the tooltip "Click on the button.then Enter a shortcut you would like ..." .

I tried downloading a kwin version and downloaded and installed project-neon-kde-workspace.However, the same behavior was seen.

Should I go strictly as per sources from anongit.kde.org/kde-workspace ?

Second --
I've downloaded the source from anongit.kde.org/kde-workspace but I'm having difficulty building it using "Qt creator".It keeps asking for executable CMake. I'll keep searching for information on it,but help would be welcome.

regards
moses
Comment 5 moses 2011-12-16 15:12:39 UTC
Please the second part of my previous message.I apologise for my ignorance.
Comment 6 moses 2011-12-16 15:13:19 UTC
(In reply to comment #5)
> Please ignore the second part of my previous message.I apologise for my ignorance.
Comment 7 Thomas Lübking 2011-12-16 15:23:17 UTC
Actually it's up to me to apologize, i'm very sorry - you're post somehow "dropped off the table".

The "clear" button is the little icon right of the shortcut button (with the tooltip you mentioned)

Since you've apparently figured how to build KDE (you don't need Qt Creator at all to do, nice IDE, no doubt, but not required for building)

Development currently _only_ happens in the master branch of the git repository.

Have a look at "kwin/utils.cpp", the bug is in "ShortcutDialog::keySequenceChanged"

Have you written code in C++ or any other language before?
Comment 8 Stefano 2011-12-19 16:10:46 UTC
Sorry if I jump in, but it looks like that this bug has been fixed. At least, I am able to clear a previous window shortcut by clicking on the clear button (the shortcut button shows "None" and the shortcut is not working anymore, as expected).

If so, this bug can be marked as resolved. Otherwise, please let me know what is not working, and I'll try to provide a patch. Thanks!
Comment 9 moses 2011-12-19 18:50:03 UTC
Thanks Stefano. Please work on the same.

@Thomas : Since I've been unable to build KDE, I'll move aside.Please guide Stefano.
Comment 10 Thomas Lübking 2011-12-23 21:41:15 UTC
A 4 days old git master shows me the "is already in use" message and it's not been changed in kwin - so iff it was fixchanged in rather recent (but more than 4 days) KGlobalAccel.
Comment 11 Thomas Lübking 2012-03-18 21:54:52 UTC
Git commit b4a33be8811f74e359ae55726530c1fa7e4954fc by Thomas Lübking.
Committed on 18/03/2012 at 17:29.
Pushed by luebking into branch 'master'.

fix ShortcutDialog to allow clearing the shortcut
REVIEW: 104336

M  +5    -0    kwin/utils.cpp

http://commits.kde.org/kde-workspace/b4a33be8811f74e359ae55726530c1fa7e4954fc