fix ShortcutDialog to allow clearing the shortcut

BUG: 234793
REVIEW: 104336